--- a/index.html
+++ b/index.html
@@ -2,15 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <title>Supergym — главная страница</title>
-    <meta
-      name="description"
-      content="Simple starter webpack 5 project template boilerplate supporting SASS/PostCSS, Babel ES7, browser syncing, code linting. Easy project setup having multiple features and developer friendly tools."
-    />
-    <meta
-      name="keywords"
-      content="webpack, webpack-configuration, template, boilerplate, setup, html, css, sass, javascript"
-    />
+    <title>Supergym — main page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="favicon.ico"><script defer src="js/app.js"></script><link href="css/app.css" rel="stylesheet"></head>
   <body>
@@ -36,13 +28,13 @@
           <div class="hero__socials">
             <ul>
               <li>
-                <a href="">FB</a>
+                <a href="#">FB</a>
               </li>
               <li>
-                <a href="">VK</a>
+                <a href="#">VK</a>
               </li>
               <li>
-                <a href="">IG</a>
+                <a href="#">IG</a>
               </li>
             </ul>
           </div>
@@ -83,19 +75,28 @@
                 <div class="card">
                   <p>С тренером</p>
                   <p>12 занятий</p>
-                  <p>5000 <span>&#8381;</span></p>
+                  <div>
+                    <p>5000</p>
+                    5000 <span>&#8381;</span>
+                  </div>
                   <button>купить абонемент</button>
                 </div>
                 <div class="card card--active">
                   <p>Дневной</p>
                   <p>с 8:00 до 17:00</p>
-                  <p>1700 <span>&#8381;</span></p>
+                  <div>
+                    <p>1700</p>
+                    1700 <span>&#8381;</span>
+                  </div>
                   <button>купить абонемент</button>
                 </div>
                 <div class="card">
                   <p>Полный день</p>
                   <p>с 8:00 до 22:00</p>
-                  <p>2700 <span>&#8381;</span></p>
+                  <div>
+                    <p>2700</p>
+                    2700 <span>&#8381;</span>
+                  </div>
                   <button>купить абонемент</button>
                 </div>
               </div>
@@ -105,19 +106,28 @@
                 <div class="card">
                   <p>С тренером</p>
                   <p>12 занятий</p>
-                  <p>5000 <span>&#8381;</span></p>
+                  <div>
+                    <p>5000</p>
+                    5000 <span>&#8381;</span>
+                  </div>
                   <button>купить абонемент</button>
                 </div>
                 <div class="card card--active">
                   <p>Дневной</p>
                   <p>с 8:00 до 17:00</p>
-                  <p>1700 <span>&#8381;</span></p>
+                  <div>
+                    <p>1700</p>
+                    1700 <span>&#8381;</span>
+                  </div>
                   <button>купить абонемент</button>
                 </div>
                 <div class="card">
                   <p>Полный день</p>
                   <p>с 8:00 до 22:00</p>
-                  <p>2700 <span>&#8381;</span></p>
+                  <div>
+                    <p>2700</p>
+                    2700 <span>&#8381;</span>
+                  </div>
                   <button>купить абонемент</button>
                 </div>
               </div>
@@ -127,19 +137,28 @@
                 <div class="card">
                   <p>С тренером</p>
                   <p>12 занятий</p>
-                  <p>5000 <span>&#8381;</span></p>
+                  <div>
+                    <p>5000</p>
+                    5000 <span>&#8381;</span>
+                  </div>
                   <button>купить абонемент</button>
                 </div>
                 <div class="card card--active">
                   <p>Дневной</p>
                   <p>с 8:00 до 17:00</p>
-                  <p>1700 <span>&#8381;</span></p>
+                  <div>
+                    <p>1700</p>
+                    1700 <span>&#8381;</span>
+                  </div>
                   <button>купить абонемент</button>
                 </div>
                 <div class="card">
                   <p>Полный день</p>
                   <p>с 8:00 до 22:00</p>
-                  <p>2700 <span>&#8381;</span></p>
+                  <div>
+                    <p>2700</p>
+                    2700 <span>&#8381;</span>
+                  </div>
                   <button>купить абонемент</button>
                 </div>
               </div>
